Added new project to portfolio & split SCSS into partials

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
   <link rel="apple-touch-icon" href="icon.png">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800|Open+Sans:400,600,700|&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+    integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,800|Open+Sans:400,600,700|&display=swap"
+    rel="stylesheet">
 </head>
 
 <body>
@@ -23,12 +25,12 @@
         <a href="index.html"><i class="fas fa-code fa-2x"></i></a>
       </div>
       <nav>
-          <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="./about/index.html">About</a></li>
-            <li><a href="#my-work">My Work</a></li>
-            <li><a href="#services">Services</a></li>
-          </ul>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="./about/index.html">About</a></li>
+          <li><a href="#my-work">My Work</a></li>
+          <li><a href="#services">Services</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -39,7 +41,8 @@
         <h3>Hi!</h3>
         <h1>I'm <span>Emery</span> Jordan</h1>
         <h2><span>Front End</span> Developer</h2>
-        <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity through code.</p>
+        <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity
+          through code.</p>
         <p class="button-container"><a href="mailto:hello@studioemery.com" class="white-button">Hire Me</a></p>
       </div>
     </section>
@@ -48,44 +51,74 @@
       <div class="content-wrapper">
         <h1>My <span>Work</span></h1>
         <div class="project-container">
-        <!-- Tab links -->
+          <!-- Tab links -->
           <div class="tab">
-            <button class="tab-links" id="default" onclick="openType(event, 'project-one')">Accelerate Marketing</button>
+            <button class="tab-links" id="default" onclick="openType(event, 'project-one')">Accelerate
+              Marketing</button>
             <button class="tab-links" onclick="openType(event, 'project-two')">Unplugged Retreat</button>
             <button class="tab-links" onclick="openType(event, 'project-three')">LOLCat Clock</button>
+            <button class="tab-links" onclick="openType(event, 'project-four')">Social Media Dashboard</button>
           </div>
-        <!-- Tab content -->
+          <!-- Tab content -->
           <aside class="tab-content-container">
+            <!-- Project 1 -->
             <div id="project-one" class="tab-content">
               <article>
-                <a href="http://accelerate-marketing.studioemery.com/" target="_blank" class="image"><img src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
+                <a href="http://accelerate-marketing.studioemery.com/" target="_blank" class="image"><img
+                    src="./img/accelerate.png" alt="Accelerate Marketing Website Screenshot" /></a>
                 <h2>Accelerate Marketing</h2>
                 <h3>WordPress, HTML5, CSS3, PHP</h3>
                 <hr>
-                <p>This project was focused on building a responsive WordPress theme for a marketing company. I loved the process of taking their pre-existing blog, including all of its content and media, and turning it into a WordPress theme. This project features lots of customization features that allow the client to update the website as needed by utilizing plugins and custom post types.</p>
+                <p>This project was focused on building a responsive WordPress theme for a marketing company. I loved
+                  the process of taking their pre-existing blog, including all of its content and media, and turning it
+                  into a WordPress theme. This project features lots of customization features that allow the client to
+                  update the website as needed by utilizing plugins and custom post types.</p>
                 <p><a href="http://github.com/emmy-html/accelerate-theme" target="_blank">View Repository</a></p>
               </article>
             </div>
-
+            <!-- Project 2-->
             <div id="project-two" class="tab-content">
               <article>
-                <a href="https://emmy-html.github.io/unplugged-retreat/" target="_blank" class="image"><img src="./img/unplugged.png" alt="Unplugged Retreat Website Screenshot" /></a>
+                <a href="https://emmy-html.github.io/unplugged-retreat/" target="_blank" class="image"><img
+                    src="./img/unplugged.png" alt="Unplugged Retreat Website Screenshot" /></a>
                 <h2>Unplugged Retreat</h2>
                 <h3>HTML5, CSS3, Git</h3>
                 <hr>
-                <p>For this project, I was faced with the task of creating a 3 page website for a retreat for tech teams in need of a team building break. It gave me a deeper understanding of how to link multiple pages to one website, as well as having CSS that can easily be reused and/or lightly modified among different website pages. I enjoyed working with flexbox features to create responsive layouts during this project.</p>
+                <p>For this project, I was faced with the task of creating a 3 page website for a retreat for tech teams
+                  in need of a team building break. It gave me a deeper understanding of how to link multiple pages to
+                  one website, as well as having CSS that can easily be reused and/or lightly modified among different
+                  website pages. I enjoyed working with flexbox features to create responsive layouts during this
+                  project.</p>
                 <p><a href="https://github.com/emmy-html/unplugged-retreat" target="_blank">View Repository</a></p>
               </article>
             </div>
-            
+            <!-- Project 3-->
             <div id="project-three" class="tab-content">
               <article>
-                <a href="https://emmy-html.github.io/lolcat-clock/" target="_blank" class="image"><img src="./img/lolcat.png" alt="LOLCAT Screenshot" /></a>
+                <a href="https://emmy-html.github.io/lolcat-clock/" target="_blank" class="image"><img
+                    src="./img/lolcat.png" alt="LOLCAT Screenshot" /></a>
                 <h2>LOLCAT Clock</h2>
                 <h3>HTML5, CSS3, JavaScript, Git</h3>
                 <hr>
-                <p>The LOLCAT Clock Project gave me a variety of tasks to translate into JavaScript. I had to create a clock that displayed the time, while also displaying a different message and image depending on the time of day. By breaking these needs down into pseudocode, I was able to write the appropriate JavaScript functions to bring it all together; then finally connect it to the HTML and CSS that was provided to me.</p>
+                <p>The LOLCAT Clock Project gave me a variety of tasks to translate into JavaScript. I had to create a
+                  clock that displayed the time, while also displaying a different message and image depending on the
+                  time of day. By breaking these needs down into pseudocode, I was able to write the appropriate
+                  JavaScript functions to bring it all together; then finally connect it to the HTML and CSS that was
+                  provided to me.</p>
                 <p><a href="https://github.com/emmy-html/lolcat-clock" target="_blank">View Repository</a></p>
+              </article>
+            </div>
+            <!--Project 4-->
+            <div id="project-four" class="tab-content">
+              <article>
+                <a href="http://emmy-html.github.io/theme-switcher" target="_blank" class="image"><img
+                    src="./img/social-media.png" alt="Social Media Dashboard with Theme Switcher" /></a>
+                <h2>Social Media Tracker Dashboard</h2>
+                <h3>HTML5, CSS3, SASS, JavaScript, Git</h3>
+                <hr>
+                <p>For this self initiated project, I was given the task of coding a social media dashboard with the ability to switch the color scheme from light mode to dark mode. I found this project to be a particularly fun challenge,
+                  because it pushed me to utilize more features of Sass and JavaScript's DOM, such as using SCSS partials and switching the body element's class with the click of a button.</p>
+                <p><a href="https://github.com/emmy-html/theme-switcher" target="_blank">View Repository</a></p>
               </article>
             </div>
           </aside>
@@ -97,27 +130,35 @@
     <section id="services">
       <div class="content-wrapper">
         <h1>Services</h1>
-          <div class="services-content">
-            <article>
-              <i class="fas fa-swatchbook fa-5x"></i>
-              <h2>A <span>creative</span> touch</h2>
-              <p>Due to my background in art and design, I can give your website that creative touch that will make it stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in between, I know how to bring your vision to life and make it uniquely you.</p>
-            </article>
-            <article>
-              <i class="fas fa-mobile-alt fa-5x"></i>
-              <h2><span>Responsive</span> design</h2>
-              <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks (and functions) beautifully no matter what device it’s being viewed on.</p>
-            </article>
-            <article>
-              <i class="fas fa-shopping-cart fa-5x"></i>
-              <h2><span>E-Commerce</span> for everyone</h2>
-              <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got your needs covered! I have experience with website builders such as Squarespace, as well as integration with plugins such as Woocommerce. We can work together to make sure your shopping cart is always full!</p>
-            </article>
-            <article>
-              <i class="fab fa-wordpress fa-5x"></i>
-              <h2>WordPress <span>Customization</span></h2>
-              <p>	I can provide WordPress services that allow you to really utilize all that the platform has to offer. If you’re transferring over from another blogging platform, you can still keep your data while upgrading to a better look and easier platform!</p>
-            </article>
+        <div class="services-content">
+          <article>
+            <i class="fas fa-swatchbook fa-5x"></i>
+            <h2>A <span>creative</span> touch</h2>
+            <p>Due to my background in art and design, I can give your website that creative touch that will make it
+              stand out from the rest! Whether you want something colorful and quirky, clean and modern, or somewhere in
+              between, I know how to bring your vision to life and make it uniquely you.</p>
+          </article>
+          <article>
+            <i class="fas fa-mobile-alt fa-5x"></i>
+            <h2><span>Responsive</span> design</h2>
+            <p>In today’s day and age, you never know where your customers are viewing your website! Whether they’re
+              visiting from their iPhone, tablet, desktop, or something in between, I’ll ensure that your website looks
+              (and functions) beautifully no matter what device it’s being viewed on.</p>
+          </article>
+          <article>
+            <i class="fas fa-shopping-cart fa-5x"></i>
+            <h2><span>E-Commerce</span> for everyone</h2>
+            <p>Whether you want to start selling products on your existing website, or need a shop refresh, I’ve got
+              your needs covered! I have experience with website builders such as Squarespace, as well as integration
+              with plugins such as Woocommerce. We can work together to make sure your shopping cart is always full!</p>
+          </article>
+          <article>
+            <i class="fab fa-wordpress fa-5x"></i>
+            <h2>WordPress <span>Customization</span></h2>
+            <p> I can provide WordPress services that allow you to really utilize all that the platform has to offer. If
+              you’re transferring over from another blogging platform, you can still keep your data while upgrading to a
+              better look and easier platform!</p>
+          </article>
         </div>
       </div>
     </section>
@@ -126,15 +167,17 @@
   <footer>
     <div class="content-wrapper">
       <h1>Have a <span>project?</span></h1>
-      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business's website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
+      <p>Do you have a website that needs a fresh look, updating, or do you just need a fresh start for your business's
+        website? Or do you think I'd make a great addition to your development team? I'd love to chat about it!</p>
       <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
-        <div class="social-media">
-          <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
-          <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
-          <a href="https://www.linkedin.com/in/emmyjordan16/"><i class="fab fa-linkedin fa-2x"></i></a>
-        </div>
+      <div class="social-media">
+        <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
+        <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
+        <a href="https://www.linkedin.com/in/emmyjordan16/"><i class="fab fa-linkedin fa-2x"></i></a>
+      </div>
     </div>
   </footer>
   <script src="js/main.js"></script>
 </body>
+
 </html>
