Updated portfolio information

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <h3>HTML5, CSS3, SASS, JavaScript, Git</h3>
                 <hr>
                 <p>For this self initiated project, I was given the task of coding a social media dashboard with the ability to switch the color scheme from light mode to dark mode. I found this project to be a particularly fun challenge,
-                  because it pushed me to utilize more features of Sass and JavaScript's DOM, such as using SCSS partials and switching the body element's class with the click of a button.</p>
+                  because it pushed me to utilize more features of Sass and JavaScript's DOM, such as using SCSS partials to change the body element's class on the click of a button.</p>
                 <p><a href="https://github.com/emmy-html/theme-switcher" target="_blank">View Repository</a></p>
               </article>
             </div>
@@ -172,7 +172,6 @@
       <p class="button-container"><a href="mailto:hello@studioemery.com" class="pink-button">Hire Me</a></p>
       <div class="social-media">
         <a href="https://github.com/emmy-html"><i class="fab fa-github-square fa-2x"></i></a>
-        <a href="https://twitter.com/emmydoesit"><i class="fab fa-twitter-square fa-2x"></i></a>
         <a href="https://www.linkedin.com/in/emmyjordan16/"><i class="fab fa-linkedin fa-2x"></i></a>
       </div>
     </div>
