Updated copy in index.html and about.html

--- a/about/index.html
+++ b/about/index.html
@@ -36,7 +36,7 @@
   <main>
     <section id="about">
       <div class="content-wrapper">
-        <h1>about <span>emery</span> jordan</h1>
+        <h1>about <span>emmy</span> jordan</h1>
           <div class="about-container">
             <article>
               <p>I’m a front end developer with a designer’s eye. My background in art and design allows me to see the beauty in just about anything - including all things technology. In college, I took an intro to web development class and got bit by the CSS bug! After graduating with my Associates of Applied Sciences in Digital Art & Design, I decided to take my creative skills to the next level by becoming a front-end web developer. I take pride in my eye for cohesive color schemes and clean designs for any project that comes my way. When I’m not coding, I love cooking, queer media and trying not to die in the mines of Stardew Valley. <a href="../img/web_resume.pdf">My Resume</a></p>
