--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <section id="hero">
       <div class="content-wrapper">
         <h3>Hi!</h3>
-        <h1>I'm <span>Emery</span> Jordan</h1>
+        <h1>I'm <span>Emmy</span> Jordan</h1>
         <h2><span>Front End</span> Developer</h2>
         <p>I'm a Chicago based graphic designer turned front end web developer that loves expressing my creativity
           through code.</p>
